--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
     <string name="pradiagnose_txt">Sebelum memulai diagnosa, kami ingin menekankan bahwa kesehatan mata Anda sangat penting bagi kami. Jika Anda mengalami gejala yang tidak biasa atau merasa khawatir dengan kondisi mata Anda, sangat kami sarankan untuk segera berkonsultasi dengan dokter spesialis mata yang berpengalaman. Dokter mata akan dapat memberikan diagnosis yang akurat dan perawatan yang sesuai dengan kebutuhan mata Anda.</string>
+    <string name="pradiagnose_ii_txt">Untuk membantu dalam proses diagnosa awal, silakan ceklis atau pilih gejala yang Anda alami dari daftar yang disediakan. Pilihlah gejala dengan hati-hati dan jujurlah dalam memilih gejala yang relevan dengan kondisi mata Anda.</string>
+    <string name="pradiagnose_iii_txt">Setelah Anda memilih gejala-gejala yang relevan, tekan tombol \'Cek Diagnosa\' untuk melihat hasil diagnosa.</string>
     <string name="mulai_diagnosa">Apakah Anda ingin memulai diagnosa sekarang?</string>
     <string name="title_diagnosa">Diagnosa</string>
     <string name="text_btn_diagnosa">Mulai Diagnosa</string>
